# speedread

./: DISPOSISJON.md  PLAN.md  REFLECTION.md  index.html  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: build-windows.yml
.obsidian/: workspace.json
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: file_ops.rs  mod.rs  readability.rs  web.rs
src/lib/ai/: claude-client.ts  code-modification.ts  prompts.ts
src/lib/components/ai/: AiSettingsDialog.svelte  DevModePanel.svelte  DiffPreview.svelte
src/lib/components/input/: InputPanel.svelte
src/lib/components/layout/: SidePanel.svelte
src/lib/components/reader/: RsvpDisplay.svelte
src/lib/components/stats/: ExportButton.svelte  HistoryGraph.svelte  StatsPanel.svelte
src/lib/engine/: orp.ts  scheduler.ts  timing.ts  tokenizer.ts
src/lib/services/: csv-export.ts  persistence.ts  theme.ts
src/lib/state/: ai-config.svelte.ts  bookmarks.svelte.ts  dev-chat.svelte.ts  reader.svelte.ts  runtime-log.svelte.ts  settings.svelte.ts  stats.svelte.ts
src/lib/types/: ai.ts  config.ts  word.ts
