[package]
name = "speedread"
version = "0.1.0"
edition = "2021"

[lib]
name = "speedread_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls"] }
url = "2"
readability = "0.3"
walkdir = "2"
regex = "1"
tokio = { version = "1", features = ["full"] }
